docs/envoy/v1.13.0/_sources/api-v2/api/v2/core/base.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/core/base.proto:

Common types
============


.. _envoy_api_msg_core.Locality:

core.Locality
-------------

`[core.Locality proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L61>`_

Identifies location of where either Envoy runs or where upstream hosts run.

.. code-block:: json

  {
    "region": "...",
    "zone": "...",
    "sub_zone": "..."
  }

.. _envoy_api_field_core.Locality.region:

region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Region this :ref:`zone <envoy_api_field_core.Locality.zone>` belongs to.
  
  
.. _envoy_api_field_core.Locality.zone:

zone
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Defines the local service zone where Envoy is running. Though optional, it
  should be set if discovery service routing is used and the discovery
  service exposes :ref:`zone data <envoy_api_field_endpoint.LocalityLbEndpoints.locality>`,
  either in this message or via :option:`--service-zone`. The meaning of zone
  is context dependent, e.g. `Availability Zone (AZ)
  <https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html>`_
  on AWS, `Zone <https://cloud.google.com/compute/docs/regions-zones/>`_ on
  GCP, etc.
  
  
.. _envoy_api_field_core.Locality.sub_zone:

sub_zone
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When used for locality of upstream hosts, this field further splits zone
  into smaller chunks of sub-zones so they can be load balanced
  independently.
  
  


.. _envoy_api_msg_core.BuildVersion:

core.BuildVersion
-----------------

`[core.BuildVersion proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L83>`_

BuildVersion combines SemVer version of extension with free-form build information
(i.e. 'alpha', 'private-build') as a set of strings.

.. code-block:: json

  {
    "version": "{...}",
    "metadata": "{...}"
  }

.. _envoy_api_field_core.BuildVersion.version:

version
  (:ref:`type.SemanticVersion <envoy_api_msg_type.SemanticVersion>`) SemVer version of extension.
  
  
.. _envoy_api_field_core.BuildVersion.metadata:

metadata
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Free-form build information.
  Envoy defines several well known keys in the source/common/common/version.h file
  
  


.. _envoy_api_msg_core.Extension:

core.Extension
--------------

`[core.Extension proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L94>`_

Version and identification for an Envoy extension.

.. code-block:: json

  {
    "name": "...",
    "category": "...",
    "version": "{...}",
    "disabled": "..."
  }

.. _envoy_api_field_core.Extension.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is the name of the Envoy filter as specified in the Envoy
  configuration, e.g. envoy.router, com.acme.widget.
  
  
.. _envoy_api_field_core.Extension.category:

category
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Category of the extension.
  Extension category names use reverse DNS notation. For instance "envoy.filters.listener"
  for Envoy's built-in listener filters or "com.acme.filters.http" for HTTP filters from
  acme.com vendor.
  
  

.. _envoy_api_field_core.Extension.version:

version
  (:ref:`core.BuildVersion <envoy_api_msg_core.BuildVersion>`) The version is a property of the extension and maintained independently
  of other extensions and the Envoy API.
  This field is not set when extension did not provide version information.
  
  
.. _envoy_api_field_core.Extension.disabled:

disabled
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Indicates that the extension is present but was disabled via dynamic configuration.
  
  


.. _envoy_api_msg_core.Node:

core.Node
---------

`[core.Node proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L124>`_

Identifies a specific Envoy instance. The node identifier is presented to the
management server, which may use this identifier to distinguish per Envoy
configuration for serving.

.. code-block:: json

  {
    "id": "...",
    "cluster": "...",
    "metadata": "{...}",
    "locality": "{...}",
    "build_version": "...",
    "user_agent_name": "...",
    "user_agent_version": "...",
    "user_agent_build_version": "{...}",
    "extensions": [],
    "client_features": []
  }

.. _envoy_api_field_core.Node.id:

id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An opaque node identifier for the Envoy node. This also provides the local
  service node name. It should be set if any of the following features are
  used: :ref:`statsd <arch_overview_statistics>`, :ref:`CDS
  <config_cluster_manager_cds>`, and :ref:`HTTP tracing
  <arch_overview_tracing>`, either in this message or via
  :option:`--service-node`.
  
  
.. _envoy_api_field_core.Node.cluster:

cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Defines the local service cluster name where Envoy is running. Though
  optional, it should be set if any of the following features are used:
  :ref:`statsd <arch_overview_statistics>`, :ref:`health check cluster
  verification
  <envoy_api_field_core.HealthCheck.HttpHealthCheck.service_name_matcher>`,
  :ref:`runtime override directory <envoy_api_msg_config.bootstrap.v2.Runtime>`,
  :ref:`user agent addition
  <envoy_api_field_config.filter.network.http_connection_manager.v2.HttpConnectionManager.add_user_agent>`,
  :ref:`HTTP global rate limiting <config_http_filters_rate_limit>`,
  :ref:`CDS <config_cluster_manager_cds>`, and :ref:`HTTP tracing
  <arch_overview_tracing>`, either in this message or via
  :option:`--service-cluster`.
  
  
.. _envoy_api_field_core.Node.metadata:

metadata
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Opaque metadata extending the node identifier. Envoy will pass this
  directly to the management server.
  
  
.. _envoy_api_field_core.Node.locality:

locality
  (:ref:`core.Locality <envoy_api_msg_core.Locality>`) Locality specifying where the Envoy instance is running.
  
  
.. _envoy_api_field_core.Node.build_version:

build_version
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is motivated by informing a management server during canary which
  version of Envoy is being tested in a heterogeneous fleet. This will be set
  by Envoy in management server RPCs.
  This field is deprecated in favor of the user_agent_name and user_agent_version values.
  
  
.. _envoy_api_field_core.Node.user_agent_name:

user_agent_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Free-form string that identifies the entity requesting config.
  E.g. "envoy" or "grpc"
  
  
.. _envoy_api_field_core.Node.user_agent_version:

user_agent_version
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Free-form string that identifies the version of the entity requesting config.
  E.g. "1.12.2" or "abcd1234", or "SpecialEnvoyBuild"
  
  
  
  Only one of :ref:`user_agent_version <envoy_api_field_core.Node.user_agent_version>`, :ref:`user_agent_build_version <envoy_api_field_core.Node.user_agent_build_version>` may be set.
  
.. _envoy_api_field_core.Node.user_agent_build_version:

user_agent_build_version
  (:ref:`core.BuildVersion <envoy_api_msg_core.BuildVersion>`) Structured version of the entity requesting config.
  
  
  
  Only one of :ref:`user_agent_version <envoy_api_field_core.Node.user_agent_version>`, :ref:`user_agent_build_version <envoy_api_field_core.Node.user_agent_build_version>` may be set.
  
.. _envoy_api_field_core.Node.extensions:

extensions
  (:ref:`core.Extension <envoy_api_msg_core.Extension>`) List of extensions and their versions supported by the node.
  
  
.. _envoy_api_field_core.Node.client_features:

client_features
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Client feature support list. These are well known features described
  in the Envoy API repository for a given major version of an API. Client features
  use reverse DNS naming scheme, for example `com.acme.feature`.
  See :ref:`the list of features <client_features>` that xDS client may
  support.
  
  


.. _envoy_api_msg_core.Metadata:

core.Metadata
-------------

`[core.Metadata proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L206>`_

Metadata provides additional inputs to filters based on matched listeners,
filter chains, routes and endpoints. It is structured as a map, usually from
filter name (in reverse DNS format) to metadata specific to the filter. Metadata
key-values for a filter are merged as connection and request handling occurs,
with later values for the same key overriding earlier values.

An example use of metadata is providing additional values to
http_connection_manager in the envoy.http_connection_manager.access_log
namespace.

Another example use of metadata is to per service config info in cluster metadata, which may get
consumed by multiple filters.

For load balancing, Metadata provides a means to subset cluster endpoints.
Endpoints have a Metadata object associated and routes contain a Metadata
object to match against. There are some well defined metadata used today for
this purpose:

* ``{"envoy.lb": {"canary": <bool> }}`` This indicates the canary status of an
  endpoint and is also used during header processing
  (x-envoy-upstream-canary) and for stats purposes.

.. code-block:: json

  {
    "filter_metadata": "{...}"
  }

.. _envoy_api_field_core.Metadata.filter_metadata:

filter_metadata
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_>) Key is the reverse DNS filter name, e.g. com.acme.widget. The envoy.*
  namespace is reserved for Envoy's built-in filters.
  
  


.. _envoy_api_msg_core.RuntimeUInt32:

core.RuntimeUInt32
------------------

`[core.RuntimeUInt32 proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L213>`_

Runtime derived uint32 with a default when not specified.

.. code-block:: json

  {
    "default_value": "...",
    "runtime_key": "..."
  }

.. _envoy_api_field_core.RuntimeUInt32.default_value:

default_value
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Default value if runtime value is not available.
  
  
.. _envoy_api_field_core.RuntimeUInt32.runtime_key:

runtime_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Runtime key to get value for comparison. This value is used if defined.
  
  


.. _envoy_api_msg_core.RuntimeFeatureFlag:

core.RuntimeFeatureFlag
-----------------------

`[core.RuntimeFeatureFlag proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L222>`_

Runtime derived bool with a default when not specified.

.. code-block:: json

  {
    "default_value": "{...}",
    "runtime_key": "..."
  }

.. _envoy_api_field_core.RuntimeFeatureFlag.default_value:

default_value
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_, *REQUIRED*) Default value if runtime value is not available.
  
  
.. _envoy_api_field_core.RuntimeFeatureFlag.runtime_key:

runtime_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Runtime key to get value for comparison. This value is used if defined. The boolean value must
  be represented via its
  `canonical JSON encoding <https://developers.google.com/protocol-buffers/docs/proto3#json>`_.
  
  


.. _envoy_api_msg_core.HeaderValue:

core.HeaderValue
----------------

`[core.HeaderValue proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L233>`_

Header name/value pair.

.. code-block:: json

  {
    "key": "...",
    "value": "..."
  }

.. _envoy_api_field_core.HeaderValue.key:

key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Header name.
  
  
.. _envoy_api_field_core.HeaderValue.value:

value
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Header value.
  
  The same :ref:`format specifier <config_access_log_format>` as used for
  :ref:`HTTP access logging <config_access_log>` applies here, however
  unknown header values are replaced with the empty string instead of `-`.
  
  


.. _envoy_api_msg_core.HeaderValueOption:

core.HeaderValueOption
----------------------

`[core.HeaderValueOption proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L246>`_

Header name/value pair plus option to control append behavior.

.. code-block:: json

  {
    "header": "{...}",
    "append": "{...}"
  }

.. _envoy_api_field_core.HeaderValueOption.header:

header
  (:ref:`core.HeaderValue <envoy_api_msg_core.HeaderValue>`, *REQUIRED*) Header name/value pair that this option applies to.
  
  
.. _envoy_api_field_core.HeaderValueOption.append:

append
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Should the value be appended? If true (default), the value is appended to
  existing values.
  
  


.. _envoy_api_msg_core.HeaderMap:

core.HeaderMap
--------------

`[core.HeaderMap proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L256>`_

Wrapper for a set of headers.

.. code-block:: json

  {
    "headers": []
  }

.. _envoy_api_field_core.HeaderMap.headers:

headers
  (:ref:`core.HeaderValue <envoy_api_msg_core.HeaderValue>`) 
  


.. _envoy_api_msg_core.DataSource:

core.DataSource
---------------

`[core.DataSource proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L261>`_

Data source consisting of either a file or an inline value.

.. code-block:: json

  {
    "filename": "...",
    "inline_bytes": "...",
    "inline_string": "..."
  }

.. _envoy_api_field_core.DataSource.filename:

filename
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Local filesystem data source.
  
  
  
  Precisely one of :ref:`filename <envoy_api_field_core.DataSource.filename>`, :ref:`inline_bytes <envoy_api_field_core.DataSource.inline_bytes>`, :ref:`inline_string <envoy_api_field_core.DataSource.inline_string>` must be set.
  
.. _envoy_api_field_core.DataSource.inline_bytes:

inline_bytes
  (`bytes <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Bytes inlined in the configuration.
  
  
  
  Precisely one of :ref:`filename <envoy_api_field_core.DataSource.filename>`, :ref:`inline_bytes <envoy_api_field_core.DataSource.inline_bytes>`, :ref:`inline_string <envoy_api_field_core.DataSource.inline_string>` must be set.
  
.. _envoy_api_field_core.DataSource.inline_string:

inline_string
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) String inlined in the configuration.
  
  
  
  Precisely one of :ref:`filename <envoy_api_field_core.DataSource.filename>`, :ref:`inline_bytes <envoy_api_field_core.DataSource.inline_bytes>`, :ref:`inline_string <envoy_api_field_core.DataSource.inline_string>` must be set.
  


.. _envoy_api_msg_core.RemoteDataSource:

core.RemoteDataSource
---------------------

`[core.RemoteDataSource proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L277>`_

The message specifies how to fetch data from remote and how to verify it.

.. code-block:: json

  {
    "http_uri": "{...}",
    "sha256": "..."
  }

.. _envoy_api_field_core.RemoteDataSource.http_uri:

http_uri
  (:ref:`core.HttpUri <envoy_api_msg_core.HttpUri>`, *REQUIRED*) The HTTP URI to fetch the remote data.
  
  
.. _envoy_api_field_core.RemoteDataSource.sha256:

sha256
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) SHA256 string for verifying data.
  
  


.. _envoy_api_msg_core.AsyncDataSource:

core.AsyncDataSource
--------------------

`[core.AsyncDataSource proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L286>`_

Async data source which support async data fetch.

.. code-block:: json

  {
    "local": "{...}",
    "remote": "{...}"
  }

.. _envoy_api_field_core.AsyncDataSource.local:

local
  (:ref:`core.DataSource <envoy_api_msg_core.DataSource>`) Local async data source.
  
  
  
  Precisely one of :ref:`local <envoy_api_field_core.AsyncDataSource.local>`, :ref:`remote <envoy_api_field_core.AsyncDataSource.remote>` must be set.
  
.. _envoy_api_field_core.AsyncDataSource.remote:

remote
  (:ref:`core.RemoteDataSource <envoy_api_msg_core.RemoteDataSource>`) Remote async data source.
  
  
  
  Precisely one of :ref:`local <envoy_api_field_core.AsyncDataSource.local>`, :ref:`remote <envoy_api_field_core.AsyncDataSource.remote>` must be set.
  


.. _envoy_api_msg_core.TransportSocket:

core.TransportSocket
--------------------

`[core.TransportSocket proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L302>`_

Configuration for transport socket in :ref:`listeners <config_listeners>` and
:ref:`clusters <envoy_api_msg_Cluster>`. If the configuration is
empty, a default transport socket implementation and configuration will be
chosen based on the platform and existence of tls_context.

.. code-block:: json

  {
    "name": "...",
    "config": "{...}",
    "typed_config": "{...}"
  }

.. _envoy_api_field_core.TransportSocket.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the transport socket to instantiate. The name must match a supported transport
  socket implementation.
  
  
.. _envoy_api_field_core.TransportSocket.config:

config
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) 
  Implementation specific configuration which depends on the implementation being instantiated.
  See the supported transport socket implementations for further documentation.
  
  
  Only one of :ref:`config <envoy_api_field_core.TransportSocket.config>`, :ref:`typed_config <envoy_api_field_core.TransportSocket.typed_config>` may be set.
  
.. _envoy_api_field_core.TransportSocket.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) 
  Implementation specific configuration which depends on the implementation being instantiated.
  See the supported transport socket implementations for further documentation.
  
  
  Only one of :ref:`config <envoy_api_field_core.TransportSocket.config>`, :ref:`typed_config <envoy_api_field_core.TransportSocket.typed_config>` may be set.
  


.. _envoy_api_msg_core.SocketOption:

core.SocketOption
-----------------

`[core.SocketOption proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L319>`_

Generic socket option message. This would be used to set socket options that
might not exist in upstream kernels or precompiled Envoy binaries.

.. code-block:: json

  {
    "description": "...",
    "level": "...",
    "name": "...",
    "int_value": "...",
    "buf_value": "...",
    "state": "..."
  }

.. _envoy_api_field_core.SocketOption.description:

description
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional name to give this socket option for debugging, etc.
  Uniqueness is not required and no special meaning is assumed.
  
  
.. _envoy_api_field_core.SocketOption.level:

level
  (`int64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Corresponding to the level value passed to setsockopt, such as IPPROTO_TCP
  
  
.. _envoy_api_field_core.SocketOption.name:

name
  (`int64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The numeric name as passed to setsockopt
  
  
.. _envoy_api_field_core.SocketOption.int_value:

int_value
  (`int64 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Because many sockopts take an int value.
  
  
  
  Precisely one of :ref:`int_value <envoy_api_field_core.SocketOption.int_value>`, :ref:`buf_value <envoy_api_field_core.SocketOption.buf_value>` must be set.
  
.. _envoy_api_field_core.SocketOption.buf_value:

buf_value
  (`bytes <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Otherwise it's a byte buffer.
  
  
  
  Precisely one of :ref:`int_value <envoy_api_field_core.SocketOption.int_value>`, :ref:`buf_value <envoy_api_field_core.SocketOption.buf_value>` must be set.
  
.. _envoy_api_field_core.SocketOption.state:

state
  (:ref:`core.SocketOption.SocketState <envoy_api_enum_core.SocketOption.SocketState>`) The state in which the option will be applied. When used in BindConfig
  STATE_PREBIND is currently the only valid value.
  
  

.. _envoy_api_enum_core.SocketOption.SocketState:

Enum core.SocketOption.SocketState
----------------------------------

`[core.SocketOption.SocketState proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L320>`_


.. _envoy_api_enum_value_core.SocketOption.SocketState.STATE_PREBIND:

STATE_PREBIND
  *(DEFAULT)* ⁣Socket options are applied after socket creation but before binding the socket to a port
  
  
.. _envoy_api_enum_value_core.SocketOption.SocketState.STATE_BOUND:

STATE_BOUND
  ⁣Socket options are applied after binding the socket to a port but before calling listen()
  
  
.. _envoy_api_enum_value_core.SocketOption.SocketState.STATE_LISTENING:

STATE_LISTENING
  ⁣Socket options are applied after calling listen()
  
  

.. _envoy_api_msg_core.RuntimeFractionalPercent:

core.RuntimeFractionalPercent
-----------------------------

`[core.RuntimeFractionalPercent proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L366>`_

Runtime derived FractionalPercent with defaults for when the numerator or denominator is not
specified via a runtime key.

.. note::

  Parsing of the runtime key's data is implemented such that it may be represented as a
  :ref:`FractionalPercent <envoy_api_msg_type.FractionalPercent>` proto represented as JSON/YAML
  and may also be represented as an integer with the assumption that the value is an integral
  percentage out of 100. For instance, a runtime key lookup returning the value "42" would parse
  as a `FractionalPercent` whose numerator is 42 and denominator is HUNDRED.

.. code-block:: json

  {
    "default_value": "{...}",
    "runtime_key": "..."
  }

.. _envoy_api_field_core.RuntimeFractionalPercent.default_value:

default_value
  (:ref:`type.FractionalPercent <envoy_api_msg_type.FractionalPercent>`, *REQUIRED*) Default value if the runtime value's for the numerator/denominator keys are not available.
  
  
.. _envoy_api_field_core.RuntimeFractionalPercent.runtime_key:

runtime_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Runtime key for a YAML representation of a FractionalPercent.
  
  


.. _envoy_api_msg_core.ControlPlane:

core.ControlPlane
-----------------

`[core.ControlPlane proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L375>`_

Identifies a specific ControlPlane instance that Envoy is connected to.

.. code-block:: json

  {
    "identifier": "..."
  }

.. _envoy_api_field_core.ControlPlane.identifier:

identifier
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An opaque control plane identifier that uniquely identifies an instance
  of control plane. This can be used to identify which control plane instance,
  the Envoy is connected to.
  
  

.. _envoy_api_enum_core.RoutingPriority:

Enum core.RoutingPriority
-------------------------

`[core.RoutingPriority proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L29>`_

Envoy supports :ref:`upstream priority routing
<arch_overview_http_routing_priority>` both at the route and the virtual
cluster level. The current priority implementation uses different connection
pool and circuit breaking settings for each priority level. This means that
even for HTTP/2 requests, two physical connections will be used to an
upstream host. In the future Envoy will likely support true HTTP/2 priority
over a single upstream connection.

.. _envoy_api_enum_value_core.RoutingPriority.DEFAULT:

DEFAULT
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_core.RoutingPriority.HIGH:

HIGH
  ⁣
  

.. _envoy_api_enum_core.RequestMethod:

Enum core.RequestMethod
-----------------------

`[core.RequestMethod proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L35>`_

HTTP request method.

.. _envoy_api_enum_value_core.RequestMethod.METHOD_UNSPECIFIED:

METHOD_UNSPECIFIED
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.GET:

GET
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.HEAD:

HEAD
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.POST:

POST
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.PUT:

PUT
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.DELETE:

DELETE
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.CONNECT:

CONNECT
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.OPTIONS:

OPTIONS
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.TRACE:

TRACE
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.PATCH:

PATCH
  ⁣
  

.. _envoy_api_enum_core.TrafficDirection:

Enum core.TrafficDirection
--------------------------

`[core.TrafficDirection proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/api/v2/core/base.proto#L49>`_

Identifies the direction of the traffic relative to the local Envoy.

.. _envoy_api_enum_value_core.TrafficDirection.UNSPECIFIED:

UNSPECIFIED
  *(DEFAULT)* ⁣Default option is unspecified.
  
  
.. _envoy_api_enum_value_core.TrafficDirection.INBOUND:

INBOUND
  ⁣The transport is used for incoming traffic.
  
  
.. _envoy_api_enum_value_core.TrafficDirection.OUTBOUND:

OUTBOUND
  ⁣The transport is used for outgoing traffic.
  
  
